--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 clokwerk = "0.4.0-rc1"
 chrono = "0.4.19"
 rand = "0.8.5"
+source_query = "0.1.3"
